// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runner project-long-hex-color-equivalence 1`] = `
Map {
  "project-long-hex-color-equivalence/empty.js" => "// tslint:disable
//
//  This file was generated automatically by @heydovetail/svg-to-react and
//  should not be manually edited.
//
import { createSvg, Props } from \\"@heydovetail/svg-to-react\\";
import * as React from \\"react\\";

export default createSvg(
  (width = 24, height = 24, color): React.ReactElement<Props> => (
    <svg width={width} height={height} viewBox=\\"0 0 24 24\\">
      <g
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"round\\"
        strokeLinejoin=\\"round\\"
        strokeWidth={2}
      >
        <circle cx={10} cy={10} r={10} stroke={color} />
        <circle cx={10} cy={10} r={10} stroke={color} />
      </g>
    </svg>
  )
);
",
}
`;

exports[`runner project-long-hex-color-equivalence 2`] = `
"Generating React components for 1 SVGs:
[33m>[39m __svgs__/empty.svg
[32m✔ __svgs__/empty.svg[39m [90m(42ms)[39m
"
`;

exports[`runner project-no-config 1`] = `
Map {
  "project-no-config/Empty.tsx" => "// tslint:disable
//
//  This file was generated automatically by @heydovetail/svg-to-react and
//  should not be manually edited.
//
import { createSvg, Props } from \\"@heydovetail/svg-to-react\\";
import * as React from \\"react\\";

export default createSvg(
  (width = 24, height = 24): React.ReactElement<Props> => (
    <svg width={width} height={height} viewBox=\\"0 0 24 24\\" />
  )
);
",
}
`;

exports[`runner project-no-config 2`] = `
"Generating React components for 1 SVGs:
[33m>[39m __svgs__/empty.svg
[32m✔ __svgs__/empty.svg[39m [90m(42ms)[39m
"
`;

exports[`runner project-short-hex-color-equivalence 1`] = `
Map {
  "project-short-hex-color-equivalence/empty.js" => "// tslint:disable
//
//  This file was generated automatically by @heydovetail/svg-to-react and
//  should not be manually edited.
//
import { createSvg, Props } from \\"@heydovetail/svg-to-react\\";
import * as React from \\"react\\";

export default createSvg(
  (width = 24, height = 24, color): React.ReactElement<Props> => (
    <svg width={width} height={height} viewBox=\\"0 0 24 24\\">
      <g
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"round\\"
        strokeLinejoin=\\"round\\"
        stroke={color}
        strokeWidth={2}
      >
        <circle cx={10} cy={10} r={10} />
        <circle cx={10} cy={10} r={10} />
      </g>
    </svg>
  )
);
",
}
`;

exports[`runner project-short-hex-color-equivalence 2`] = `
"Generating React components for 1 SVGs:
[33m>[39m __svgs__/empty.svg
[32m✔ __svgs__/empty.svg[39m [90m(42ms)[39m
"
`;

exports[`runner project-svg-with-ids 1`] = `
Map {
  "project-svg-with-ids/Empty.tsx" => "// tslint:disable
//
//  This file was generated automatically by @heydovetail/svg-to-react and
//  should not be manually edited.
//
import { createSvg, Props } from \\"@heydovetail/svg-to-react\\";
import * as React from \\"react\\";

export default createSvg(
  (width = 24, height = 24): React.ReactElement<Props> => (
    <svg width={width} height={height} viewBox=\\"0 0 24 24\\">
      <defs>
        <radialGradient
          cx=\\"50.014%\\"
          cy=\\"54.715%\\"
          fx=\\"50.014%\\"
          fy=\\"54.715%\\"
          r=\\".07%\\"
          gradientTransform=\\"matrix(.92431 0 0 1 .038 0)\\"
          id=\\"adba002200d8a933a\\"
        />
      </defs>
      <g
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"round\\"
        strokeLinejoin=\\"round\\"
        strokeWidth={2}
      >
        <circle cx={10} cy={10} r={10} stroke=\\"#DEADBEEF\\" />
        <circle
          cx={10}
          cy={10}
          r={10}
          stroke=\\"#deadbeef\\"
          fill=\\"url(#adba002200d8a933a)\\"
        />
      </g>
    </svg>
  )
);
",
}
`;

exports[`runner project-svg-with-ids 2`] = `
"Generating React components for 1 SVGs:
[33m>[39m __svgs__/empty.svg
[32m✔ __svgs__/empty.svg[39m [90m(42ms)[39m
"
`;

exports[`runner project-with-config 1`] = `
Map {
  "project-with-config/empty.js" => "// tslint:disable
//
//  This file was generated automatically by @heydovetail/svg-to-react and
//  should not be manually edited.
//
import { createSvg, Props } from \\"@heydovetail/svg-to-react\\";
import * as React from \\"react\\";

export default createSvg(
  (width = 24, height = 24, color): React.ReactElement<Props> => (
    <svg width={width} height={height} viewBox=\\"0 0 24 24\\">
      <g
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"round\\"
        strokeLinejoin=\\"round\\"
        strokeWidth={2}
      >
        <circle cx={10} cy={10} r={10} stroke={color} />
        <circle cx={10} cy={10} r={10} stroke={color} />
      </g>
    </svg>
  )
);
",
}
`;

exports[`runner project-with-config 2`] = `
"Generating React components for 1 SVGs:
[33m>[39m __svgs__/empty.svg
[32m✔ __svgs__/empty.svg[39m [90m(42ms)[39m
"
`;
